frontend/src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

h1,
h2,
h3,
h4,
h5,
h6 {
  @apply font-heading;
}

@layer components {
  .button {
    @apply p-4 flex items-center justify-center bg-primary rounded-md text-lg w-fit;
    @apply hover:bg-primary-550 active:bg-primary-600 disabled:opacity-40;
  }

  .button.nobg {
    @apply bg-transparent hover:text-black hover:bg-neutral-250 active:bg-neutral-300 active:text-black;
  }

  .button.outlined {
    @apply border border-primary text-primary bg-transparent hover:bg-neutral-300 active:bg-neutral-400;
  }

  .media-row {
    @apply grid gap-4 w-full justify-evenly;
  }
  .media-row.poster {
    @apply grid-cols-[repeat(auto-fit,12rem)];
  }
  .media-row.backdrop {
    @apply w-[calc(100%+6rem)] grid-cols-[repeat(auto-fit,18rem)];
  }
}

